--- a/SocialNetwork/nbproject/project.properties
+++ b/SocialNetwork/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SocialNetwork
-main.class=SocialNetwork
+main.class=InicioSesion.Controller.InicioProcesarController
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
