--- a/SocialNetwork/nbproject/project.properties
+++ b/SocialNetwork/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SocialNetwork
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=D:\\Accessories\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.44-bin.jar=lib/mysql-connector-java-5.1.44-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
